tests/bases/team-label-kyverno/patched.yaml
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  labels:
    application.giantswarm.io/team: "honeybadger"
  name: my-app
  namespace: default
spec:
  interval: 10m
  chartRef:
    kind: OCIRepository
    name: my-app
